--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,8 @@
 book_filename: "bookdownproj"
 output_dir: docs
 delete_merged_file: true
-edit: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/edit/master/%s
-view: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/blob/master/%s
+edit: https://github.com/git@github.com:sabaferdous12/L2D_trials/edit/master/%s
+view: https://github.com/git@github.com:sabaferdous12/L2D_trials/blob/master/%s
 language:
   ui:
     chapter_name: "Chapter "
